--- a/group2-proj/src/App.css
+++ b/group2-proj/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
