--- a/group2-proj/src/App.css
+++ b/group2-proj/src/App.css
@@ -1,43 +1,73 @@
-.App {
-  text-align: center;
+html, body{
+  height:100%;
+  min-height:100%;
+  overflow: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-image:linear-gradient(to right,#FFE53B, #FF005B);
+  position: relative;
+  margin: 0px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left{
+  height: 100%; width:60%;
+  background-color: white;
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+  float: left;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.right{
+background-image:linear-gradient(to right,#FFE53B, #FF005B);
+color: white;
+height: 100%; width: 40%;
+padding-left: 20px;
+box-sizing: border-box;
+border-top-right-radius: inherit;
+border-bottom-right-radius: inherit;
+float: right;
 }
+div{
+font-family: "Roboto";
 
-.App-link {
-  color: #61dafb;
 }
-
-table, th, td {
-  border: 2px solid black;
-  border-collapse: collapse;
+.center{
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+height:70%; width: 70%;
+background-color: inherit;
+border-radius: 30px;
+border-style: none;
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 20px 50px 0 rgba(0,0,0,0.19);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+padding-left: 10%;
+padding-top: 10%;
+}
+input{
+border-radius: 25px;
+border-style: none;
+height: 30px;
+width: 60%;
+padding: 5px 5px 5px 5px;
+}
+button{
+font-family: "Roboto";
+border-radius: 25px;
+border-style: none;
+font-size: large;
+background-color: #bdccd5;
+color: white;
+height: 50px;
+width: 100px;
+transition: ease-in-out, width .10s ease-in-out;
+}
+button:hover{
+height: 50px;
+width: 110px;
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 20px 50px 0 rgba(0,0,0,0.19);
+}
+button:active {
+background-color: #9c9290;
+transform: translateY(4px);
 }
