--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -62,6 +62,7 @@ div{
     background-color: #8F00ff;
     transition: background-color 0.2s;
     text-decoration: none;
+    border-right: 1px solid #bbb;
 }
 .navbar :hover {
     background-color: white;
@@ -103,10 +104,26 @@ li a:hover, li a:active {
     border-radius: 12px;
     color: #8F00ff;
 }
+
+.user {
+    font-family: "Roboto";
+    font-size: larger;
+    text-align: center;
+}
+.listname {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+h2{
+    text-align: center;
+}
 table{
     margin: 30px 10px 10px 10px;
     width: 99%;
     border-style: none;
+    text-align: center;
 }
 th{
     background-color: #D9C4EC;
