--- a/group2-proj/src/App.css
+++ b/group2-proj/src/App.css
@@ -1,10 +1,11 @@
+
 html, body{
   height:100%;
   min-height:100%;
   overflow: hidden;
 }
 body{
-  background-image:linear-gradient(to right,#FFE53B, #FF005B);
+  background-image: linear-gradient(to right top, #0579c0, #7295ce, #a8b3dc, #d4d5ea, #f9f9f9);
   position: relative;
   margin: 0px;
 }
@@ -16,7 +17,7 @@ body{
   float: left;
 }
 .right{
-background-image:linear-gradient(to right,#FFE53B, #FF005B);
+background-color: #00b4d8;
 color: white;
 height: 100%; width: 40%;
 padding-left: 20px;
@@ -26,7 +27,7 @@ border-bottom-right-radius: inherit;
 float: right;
 }
 div{
-font-family: "Roboto";
+font-family: "Poppins";
 
 }
 .center{
@@ -36,13 +37,15 @@ left: 50%;
 transform: translate(-50%, -50%);
 height:70%; width: 70%;
 background-color: inherit;
+position: absolutes;
 border-radius: 30px;
 border-style: none;
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 20px 50px 0 rgba(0,0,0,0.19);
 }
 .container{
-padding-left: 10%;
-padding-top: 10%;
+padding-left: 20px;
+padding-right: 20px;
+padding-top: 23px;
 }
 input{
 border-radius: 25px;
@@ -51,8 +54,16 @@ height: 30px;
 width: 60%;
 padding: 5px 5px 5px 5px;
 }
+.container img{
+  margin-left: 15%;
+  margin-right: 15%;
+
+}
+.container h1{
+  text-align: center;
+}
 button{
-font-family: "Roboto";
+font-family: "Poppins";
 border-radius: 25px;
 border-style: none;
 font-size: large;
