--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -87,7 +87,14 @@ li a:hover, li a:active {
     font-family: "Roboto";
     font-size: larger;
     text-align: center;
+    background-color: #ffd6ff;
+    width: 20%;
+    margin-top: 3mm;
+    margin-left: 5mm;
+    border-radius: 100px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 20px 50px 0 rgba(0,0,0,0.19);
 }
+
 .listname {
     margin: auto;
     width: 50%;
@@ -103,7 +110,7 @@ table{
     border-style: none;
     text-align: center;
     display: block;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     white-space: nowrap;
 }
 th{
