--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -33,7 +33,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #8F00ff;
+  background-color: #ffd6ff;
     display: block;
     color: white;
     text-align: center;
@@ -47,7 +47,7 @@ body {
     color: black;
     text-align: center;
     padding: 14px 16px;
-    background-color: #8F00ff;
+    background-color: #ffd6ff;
     transition: background-color 0.2s;
     text-decoration: none;
     border-right: 1px solid #bbb;
@@ -72,7 +72,7 @@ li a {
     color: black;
     text-align: center;
     padding: 14px 16px;
-    background-color: #8F00ff;
+    background-color: #ffd6ff;
     transition: background-color 0.2s;
     text-decoration: none;
     border-right: 1px solid #bbb;
