--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -115,16 +115,17 @@ table{
     border-style: none;
     text-align: center;
     display: block;
-    /* overflow-y: scroll; */
     white-space: nowrap;
 }
 th{
     background-color: #D9C4EC;
     border-style: none;
     text-align: center;
+    border: 1px solid ;
 }
 td{
     width: 12%;
+    border-left: 1px solid;
 }
 td button{
     background-color: #bdccd5;
