--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -58,13 +58,19 @@ body {
     border-radius: 12px;
     color: black;
 }
-.user {
-    float: left;
-    display: block;
-    width: 100%;
-    text-align: end;
-    background-color: #c8b6ff;
-    padding-bottom:10px;
+.username {
+    font-family: "Roboto";
+    font-size: larger;
+    text-align: center;
+    background-color: #ffd6ff;
+    width: fit-content;
+    margin-top: 3mm;
+    margin-left: 5mm;
+    margin-bottom: 3mm;
+    padding: 3mm;
+    border-style: groove;
+    border-radius: 100px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 20px 50px 0 rgba(0,0,0,0.19);
 }
 
 ul {
