Updated login css

--- a/group2-proj/src/App.css
+++ b/group2-proj/src/App.css
@@ -55,9 +55,22 @@ width: 60%;
 padding: 5px 5px 5px 5px;
 }
 .container img{
-  margin-left: 15%;
+  margin-left: 7%;
   margin-right: 15%;
 
+}
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 .container h1{
   text-align: center;
