--- a/group2-proj/src/App.css
+++ b/group2-proj/src/App.css
@@ -21,10 +21,14 @@ background-color: #00b4d8;
 color: white;
 height: 100%; width: 40%;
 padding-left: 20px;
+padding-top:15mm;
 box-sizing: border-box;
 border-top-right-radius: inherit;
 border-bottom-right-radius: inherit;
 float: right;
+}
+.result{
+  font-size: large;
 }
 div{
 font-family: "Poppins";
