Changed class attribute to className in all .js files

--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -58,7 +58,7 @@ body {
     border-radius: 12px;
     color: black;
 }
-.username {
+.token {
     font-family: "Poppins";
     font-size: medium;
     text-align: center;
