fixed viewdetails table

--- a/group2-proj/src/ViewDetails.css
+++ b/group2-proj/src/ViewDetails.css
@@ -3,9 +3,14 @@
     float: right;
     margin-top: 12.5mm;
 }
-td {
+.studDetailTable td {
     border: 1px solid;
     width: 100%;
+    border-radius: 30px;
+}
+.studDetailTable th {
+    border-radius: 30px;
+    border-style: none;
 }
 .stud {
     float: left;
