--- a/group2-proj/src/Dashboard.css
+++ b/group2-proj/src/Dashboard.css
@@ -111,19 +111,20 @@ ul {
 h2{
     text-align: center;
 }
-table{
-    margin: 30px 10px 10px 10px;
-    width: 99%;
+.dashboardTable{
+    margin: 0px;
+    margin-top: 10px;
+    width: 100%;
     border-style: none;
     text-align: center;
     display: block;
     white-space: nowrap;
-    border-color: transparent;
     background-color: white;
     border-collapse: collapse;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
 }
+
 th{
     background-color: #D9C4EC;
     border-style: none;
@@ -133,10 +134,11 @@ th{
 }
 td{
     width: 12%;
-    
+
 }
 tr{
     transition: 0.2s;
+    
 }
  table tr:hover{
     background-color: rgb(234, 234, 234);
@@ -155,7 +157,19 @@ button{
 }
 .btnDetails{
     width: auto;
+    transition: 0.2s;
+}
+.btnDetails:hover{
+    transform: translateY(-2px);
 }
 .back {
     margin-left: 45%;
+}
+.tableTitle{
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.tableFooter{
+    padding-bottom: 20px;
 }
