--- a/group2-proj/src/ViewDetails.css
+++ b/group2-proj/src/ViewDetails.css
@@ -2,11 +2,17 @@
     width: 50%;
     float: right;
     margin-top: 12.5mm;
+    margin-right: 10px;
+    background-color: white;
+    padding: 10px;
+    border-radius: 25px;
 }
 .studDetailTable td {
-    border: 1px solid;
+    border: solid 0.5px;
     width: 100%;
     border-radius: 30px;
+    background-color: transparent;
+    padding-left: 20px;
 }
 .studDetailTable th {
     border-radius: 30px;
@@ -15,4 +21,22 @@
 .stud {
     float: left;
     margin-left: -10mm;
+}
+.backToDashboard{
+    background-color: #bdccd5;
+    padding: 10px;
+    width: auto;
+    transition: 0.2s;
+}
+.backToDashboard:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 20px 50px 0 rgba(0,0,0,0.19);
+    width: AUTO;
+    transform: translateY(-4px);
+}
+.centerthebutton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
 }
